--- a/front-end/templates/home.html
+++ b/front-end/templates/home.html
@@ -1,37 +1,42 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <!-- Required meta tags -->
+    <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Home Page</title>
+    <title>Google Maps JavaScript API Example</title>
+    <style>
+        /* Optional CSS styles for the map container */
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar">
-        <a class="navbar-brand" href="#">RideMate</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Station</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Register</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <h1>Home Page</h1>
+    <div id="map"></div>
+    <script>
+        // Initialize and display the map
+        function initMap() {
+            // The location to center the map on
+            const myLatLng = { lat: 37.7749, lng: -122.4194 };
+
+            // Create a new map object and center it on the specified location
+            const map = new google.maps.Map(document.getElementById("map"), {
+                center: myLatLng,
+                zoom: 12
+            });
+
+            // Add a marker at the specified location
+            const marker = new google.maps.Marker({
+                position: myLatLng,
+                map,
+                title: "San Francisco"
+            });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
 </body>
 
 </html>
