--- a/templates/map.html
+++ b/templates/map.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>Google Map Example</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC52j5KuFhqFUz3qfPc7s16bmfqRLb9wy8"></script>
+    <title>Map</title>
+    <style>
+        #map {
+            height: 500px;
+        }
+    </style>
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ api_key }}"></script>
     <script>
         function initMap() {
-            var dublin = { lat: 53.3498, lng: -6.2603 };
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 12,
-                center: dublin
-            });
-            var marker = new google.maps.Marker({
-                position: dublin,
-                map: map
-            });
+            var mapOptions = {{ map_options|tojson }};
+            var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+        
+            var markers = {{ markers|tojson }};
+            console.log(markers);  // Print the markers array in the console
+        
+            for (var i = 0; i < markers.length; i++) {
+                var marker = markers[i];
+                var newMarker = new google.maps.Marker({
+                    position: marker.position,
+                    title: marker.title,
+                    map: map
+                });
+            }
         }
+        
     </script>
 </head>
-
 <body onload="initMap()">
-    <div id="map" style="height: 500px;"></div>
+    <div id="map"></div>
 </body>
-
 </html>
