--- a/templates/map.html
+++ b/templates/map.html
@@ -23,8 +23,27 @@
                     title: marker.title,
                     map: map
                 });
+                // Add the event listeners to each marker
+                attachInfoWindow(newMarker, map, marker);
+            }
+                
+            function attachInfoWindow(marker, map, markerData) {
+                var infoWindow = new google.maps.InfoWindow({
+                    content: '<div><strong>' + markerData.title + '</strong></div>' +
+                        '<div>Status: ' + markerData.status + '</div>' +
+                        '<div>Available stands: ' + markerData.bike_stands + '</div>'
+                });
+            
+                marker.addListener('mouseover', function() {
+                    infoWindow.open(map, this);
+                });
+            
+                marker.addListener('mouseout', function() {
+                    infoWindow.close();
+                });
             }
         }
+        
         
     </script>
 </head>
