More css, fetch weather on each marker click #78

--- a/static/style.css
+++ b/static/style.css
@@ -94,8 +94,8 @@ input:focus-visible {
     opacity: 0.6;
 }
 
-#weather-forecast{
-    height: 30%;
+#weather{
+    height: 300px;
     overflow-x: auto;
     overflow-y: hidden;
     display: flex;
