--- a/templates/data.html
+++ b/templates/data.html
@@ -3,10 +3,86 @@
 
 <head>
     <title>Station Data</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            font-family: Arial, sans-serif;
+            width: 100%;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          }
+          
+          thead {
+            background-color: #f5f5f5;
+            border-bottom: 1px solid #ddd;
+          }
+          
+          th {
+            font-weight: bold;
+            text-align: left;
+            padding: 10px;
+          }
+          
+          td {
+            border-bottom: 1px solid #ddd;
+            padding: 10px;
+          }
+          
+          tr:nth-child(even) {
+            background-color: #f2f2f2;
+          }
+          
+          tr:hover {
+            background-color: #ddd;
+          }
+          form {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+          }
+          
+          label {
+            font-size: 20px;
+            margin-right: 10px;
+          }
+          
+          input[type="text"] {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          }
+          
+          select {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-right: 10px;
+          }
+          
+          button[type="submit"] {
+            padding: 10px 20px;
+            background-color: #2ecc71;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+          }
+          
+          button[type="submit"]:hover {
+            background-color: #27ae60;
+          }
+          
+      </style>
 </head>
 
 <body>
-    <h1>Station Data</h1>
     <form action="{{ url_for('station_data') }}" method="get">
         <label for="query">Search:</label>
         <input type="text" name="query" id="query" value="{{ request.args.get('query', '') }}">
