More css, fetch weather on each marker click #78

--- a/static/style.css
+++ b/static/style.css
@@ -99,5 +99,15 @@ input:focus-visible {
     overflow-x: auto;
     overflow-y: hidden;
     display: flex;
+    flex-direction: column;
+}
+
+#weather_current{
+    width: 100%;
+    display: flex;
     flex-direction: row;
+}
+
+#weather_icon{
+    height: 100%;
 }
