--- a/templates/map.html
+++ b/templates/map.html
@@ -44,7 +44,7 @@
             function attachInfoWindow(marker, map, markerData) {
                 var infoWindow = new google.maps.InfoWindow({
                     content: '<div><strong>' + markerData.title + '</strong>' +
-                        '<div><i class="wi wi-wmo4680-' + markerData.weathercode + '"></i></div>' +
+                        '<div><img src="../static/thermometer.png" height="20"></div>' +
                         '<div>Status: ' + markerData.status + '</div>' +
                         '<div>Available stands: ' + markerData.bike_stands + '</div></div>'
                 });
@@ -61,12 +61,46 @@
                     document.getElementById('side-bar').style.height = '98%';
                     document.getElementById('side-info').style.display = 'flex';
                     document.getElementById('close-icon').style.display = 'block';
-                    var response = fetch("https://api.open-meteo.com/v1/forecast?latitude="+
+
+                    var weather_api = "https://api.open-meteo.com/v1/forecast?latitude="+
                         markerData.position.lat+
                         "&longitude="+markerData.position.lng+
                         "&hourly=temperature_2m,precipitation_probability,weathercode,windspeed_10m&current_weather=true"
-                    ).then(response => response.json()
-                    ).then(response => console.log(JSON.stringify(response)));
+
+                    // Getting weather info
+                    // var responseJson = fetch(weather_api).then(function(response){
+                    //    return response.json();
+                    //})
+                    //.then(data => {
+                    //    data.forEach(result => {
+                    //        return result.current_weather
+                    //    })
+                    //})
+                    // ).then(response => response.json()
+                    // );
+                    // .then(response => JSON.stringify(response));
+
+
+                    // console.log(JSON.stringify(responseJson));
+
+                    // console.log(responseJson)
+                    var weatherCode;
+                    var xmlhttp = new XMLHttpRequest();
+
+                    xmlhttp.onreadystatechange = function() {
+                        if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {        
+                            //Parse the JSON data to a JavaScript variable. 
+                            parsedObj = JSON.parse(xmlhttp.responseText);  
+                            weatherCode = parsedObj.current_weather.weathercode;                            
+                            
+                            //print weatherCode to html
+                            // console.log(weatherCode);
+                            document.getElementById("weather-icon").innerHTML=weatherCode
+                        }
+                    };
+                    xmlhttp.open("GET", weather_api, true);
+                    xmlhttp.send();
+
                 });
             }
 
@@ -139,7 +173,8 @@
         <div id="side-info">
             <div id="weather">
             <div id="weather-current">
-                <div id="weather-icon"></div>
+                <div id="weather-icon">
+                </div>
                 <div id="temperature"></div>
                 <div id=""></div>
             </div>
